--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -244,7 +244,7 @@ h6 { font-size: 16px; }
 	z-index: 10;
 	padding: 30px 0px;
 	transform: translateY(-101%);
-	
+
 	-webkit-transition: all .3s ease;
 	   -moz-transition: all .3s ease;
 	    -ms-transition: all .3s ease;
@@ -357,7 +357,7 @@ h6 { font-size: 16px; }
     transition-property: transform;
     transition-duration: 0.15s;
     transition-timing-function: ease;
-	
+
 	-webkit-border-radius: 4px;
 	   -moz-border-radius: 4px;
 	        border-radius: 4px;
@@ -410,7 +410,7 @@ h6 { font-size: 16px; }
 .my_trigger .hamburger .hamburger-inner{
 	background-color: #000;
 	width: 30px;
-	
+
 	-webkit-transition: all .3s ease;
 	   -moz-transition: all .3s ease;
 	    -ms-transition: all .3s ease;
@@ -464,7 +464,7 @@ h6 { font-size: 16px; }
 	position: relative;
 	clip-path: polygon(0 0, 100% 0, 100% 100%, 25% 100%, 0 100%);
 	overflow: hidden;
-	
+
 	-webkit-transition: all .3s ease;
 	   -moz-transition: all .3s ease;
 	    -ms-transition: all .3s ease;
@@ -545,7 +545,7 @@ h6 { font-size: 16px; }
 	opacity: 0;
 	visibility: hidden;
 	transform: translateZ(0);
-	
+
 	-webkit-transition: all .5s ease;
 	   -moz-transition: all .5s ease;
 	    -ms-transition: all .5s ease;
@@ -597,7 +597,7 @@ h6 { font-size: 16px; }
     filter: alpha(opacity=100);
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
     visibility: visible;
-	
+
     -webkit-transition: all .7s;
     -moz-transition: all .7s;
     -ms-transition: all .7s;
@@ -617,7 +617,7 @@ h6 { font-size: 16px; }
     height: 50%;
     display: block;
     top: 0;
-	
+
     -webkit-animation: scroll-down 2s ease-in-out infinite;
     -ms-animation: scroll-down 2s ease-in-out infinite;
     animation: scroll-down 2s ease-in-out infinite;;
@@ -740,6 +740,26 @@ h6 { font-size: 16px; }
 	clear: both;
 	float: left;
 }
+
+.grax_tm_button button{
+    background-color: #e54b4b;
+    border-color: #e54b4b;
+    width: 100%;
+    height: 53px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    cursor: pointer;
+    color: #fff;
+    transition: background-color 0.4s ease-in-out;
+}
+
+.grax_tm_button button:hover{
+    background-color: #fff;
+    color: #e54b4b;
+}
+
 .grax_tm_button a{
 	text-decoration: none;
     color: #fff;
@@ -748,7 +768,7 @@ h6 { font-size: 16px; }
 	border: 2px solid #e54b4b;
     padding: 10px 40px;
     border-radius: 5px;
-	
+
 	-webkit-transition: all .3s ease;
 	   -moz-transition: all .3s ease;
 	    -ms-transition: all .3s ease;
@@ -828,7 +848,7 @@ h6 { font-size: 16px; }
 	-webkit-animation: wow 2s cubic-bezier(0.165, 0.840, 0.440, 1.000);  /* Safari 4+ */
 	-moz-animation:    wow 2s cubic-bezier(0.165, 0.840, 0.440, 1.000);  /* Fx 5+ */
 	animation:         wow 2s cubic-bezier(0.165, 0.840, 0.440, 1.000);  /* IE 10+ */
-	width:100%;	
+	width:100%;
 }
 
 @-webkit-keyframes wow {0%{ width:0%; } 100%{ width:100%; }}
@@ -850,7 +870,7 @@ h6 { font-size: 16px; }
 	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: 10px;
-	
+
 }
 .grax_tm_portfolio{
 	width: 100%;
@@ -911,10 +931,10 @@ h6 { font-size: 16px; }
 	z-index: 1;
 	background-color: #f9f9f9;
 	border-radius: 5px;
-	
+
 	opacity: 0;
 	visibility: hidden;
-	
+
 	-webkit-transition: all .3s ease;
 	   -moz-transition: all .3s ease;
 	    -ms-transition: all .3s ease;
@@ -930,10 +950,10 @@ h6 { font-size: 16px; }
 	bottom: 20px;
 	left: 30px;
 	z-index: 2;
-	
+
 	opacity: 0;
 	visibility: hidden;
-	
+
 	-webkit-transition: all .3s ease;
 	   -moz-transition: all .3s ease;
 	    -ms-transition: all .3s ease;
@@ -1033,7 +1053,7 @@ h6 { font-size: 16px; }
 	top: 0px;
 	bottom: 0px;
 	left: 0px;
-	right: 0px;  
+	right: 0px;
     background-image: url(..//img/patterns/inspiration-geometry.png);
     background-repeat: repeat;
     opacity: 1; /**  If you choose lighter pattern image as background please Decrease opacity  **/
@@ -1187,10 +1207,10 @@ h6 { font-size: 16px; }
 	right: 0px;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-position:center; 
+	background-position:center;
 	transform: scale(1) translateZ(0);
 	border-radius: 5px;
-	
+
 	-webkit-transition: all .3s ease;
 	   -moz-transition: all .3s ease;
 	    -ms-transition: all .3s ease;
@@ -1211,7 +1231,7 @@ h6 { font-size: 16px; }
 	font-size: 18px;
 	font-weight: 600;
 	display: inline-block;
-	
+
 	-webkit-transition: all .3s ease;
 	   -moz-transition: all .3s ease;
 	    -ms-transition: all .3s ease;
@@ -1229,7 +1249,7 @@ h6 { font-size: 16px; }
 .grax_tm_news .news_list ul li .details .date a{
 	text-decoration: none;
 	color: #767676;
-	
+
 	-webkit-transition: all .3s ease;
 	   -moz-transition: all .3s ease;
 	    -ms-transition: all .3s ease;
@@ -1378,7 +1398,7 @@ body.modal{
 .grax_tm_modalbox_news .date a{
 	text-decoration: none;
     color: #767676;
-	
+
     -webkit-transition: all .3s ease;
     -moz-transition: all .3s ease;
     -ms-transition: all .3s ease;
@@ -1587,7 +1607,7 @@ body.modal{
 .grax_tm_contact .fields .last textarea:focus{
 	outline: none;
 	border: 1px solid rgba(0,0,0,.5);
-} 
+}
 .grax_tm_contact .empty_notice{
 	color: #F52225;
 	margin-bottom: 7px;
@@ -1870,7 +1890,7 @@ body.modal{
 	width: 200px;
 	background-color: rgba(0,0,0,1.00);
 	padding: 40px 20px 33px 30px;
-	
+
 	-webkit-transition: all .3s ease;
 	   -moz-transition: all .3s ease;
 	    -ms-transition: all .3s ease;
@@ -1971,7 +1991,7 @@ body.modal{
 .grax_tm_settings .direction li a{
 	opacity: .4;
 	text-decoration: none;
-	color: #fff; 
+	color: #fff;
 }
 .grax_tm_settings .direction li a.active{
 	opacity: 1;
@@ -2126,10 +2146,10 @@ body.dark .grax_tm_settings .cursor li .svg,
 	top: 0px;
 	bottom: 0px;
 	left: 0px;
-	right: 0px;  
+	right: 0px;
     background-image: url(..//img/patterns/light-honeycomb.png);
     background-repeat: repeat;
-    opacity: .4; 
+    opacity: .4;
     z-index: 2;
 }
 .grax_tm_intro_hero:after{
@@ -2210,7 +2230,7 @@ body.dark .grax_tm_settings .cursor li .svg,
 	float: left;
 	width: 50%;
 	padding-left: 50px;
-	position: relative; 
+	position: relative;
 }
 .grax_tm_intro_content .demo_list ul li .list_inner{
 	width: 100%;
@@ -2227,7 +2247,7 @@ body.dark .grax_tm_settings .cursor li .svg,
 	top: -10px;
 }
 .grax_tm_intro_content .demo_list ul li .list_inner h3{
-	font-size: 20px; 
+	font-size: 20px;
 	font-weight: 600;
 	padding-top: 20px;
 }
@@ -2248,13 +2268,13 @@ body.dark .grax_tm_settings .cursor li .svg,
 	display: inline-block;
 	bottom: 80px;
     right: 50px;
-		
+
 	-webkit-transition: all 0.2s;
 	   -moz-transition: all 0.2s;
 	    -ms-transition: all 0.2s;
 	     -o-transition: all 0.2s;
-	        transition: all 0.2s;	
-		
+	        transition: all 0.2s;
+
 }
 
 @-webkit-keyframes myAnimPrice {
@@ -2357,7 +2377,7 @@ body.dark .grax_tm_settings .cursor li .svg,
 	.grax_tm_copyright .social{margin-bottom: 10px;}
 	.grax_tm_modalbox_news .details .title{font-size: 25px;}
 	.grax_tm_modalbox_news .description_wrap{padding: 20px;}
-	
+
 	.grax_tm_intro_fixed_price{display: none;}
 	.grax_tm_intro_content .title_holder h3{letter-spacing: 4px;}
 	.grax_tm_intro_content .demo_list ul{margin: 0px;}
