--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -864,6 +864,9 @@ h6 { font-size: 16px; }
 	height: auto;
 	clear: both;
 	float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .grax_tm_title_holder span{color: #e54b4b;	}
 .grax_tm_title_holder h3{
@@ -885,7 +888,7 @@ h6 { font-size: 16px; }
 	height: auto;
 	clear: both;
 	float: left;
-	padding-top: 90px;
+	padding-top: 50px;
 }
 .grax_tm_portfolio ul{
 	margin: 0px 0px 0px -50px;
@@ -2390,4 +2393,36 @@ body.dark .grax_tm_settings .cursor li .svg,
 	.grax_tm_portfolio ul li{width: 100%;padding-left: 0px;}
 	.grax_tm_news .news_list ul{margin: 0px;}
 	.grax_tm_news .news_list ul li{width: 100%;padding-left: 0px;}
+}
+
+
+
+.grax_tm_portfolio .categories{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.grax_tm_portfolio .categories .categories-inner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    gap: 20px;
+}
+
+.grax_tm_portfolio .categories .categories-inner p{
+    cursor: pointer;
+    font-size: 16px;
+    color: #000;
+    font-weight: 600;
+    line-height: 24px;
+    margin: 0;
+    transition: color 0.4s ease-in-out;
+}
+
+.grax_tm_portfolio .categories .categories-inner p:hover{
+    color: #e54b4b;
 }
